<resources>
    <string name="app_name">MyAppPortfolio</string>
    <string name="action_settings">Settings</string>
    <string name="button1Text">SPOTIFY STREAMER</string>
    <string name="button2Text">SCORES APP</string>
    <string name="button3Text">LIBRARY APP</string>
    <string name="button4Text">BUILD IT BIGGER</string>
    <string name="button5Text">XYZ READER</string>
    <string name="button6Text">CAPSTONE: MY OWN APP</string>
    <string name="header">My Nanodegree apps!!</string>


</resources>
