<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.omkar.myappportfolio.MainActivity"
    tools:showIn="@layout/activity_main"
    android:background="@color/youtubeRed">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textview"
        android:text="@string/header"
        android:textSize="@dimen/headerTextSize"
        android:layout_centerHorizontal="true"
        />

    <Button
        android:layout_width="@dimen/buttonWidth"
        android:layout_height="wrap_content"
        android:id="@+id/button1"
        android:layout_below="@+id/textview"
        android:layout_centerHorizontal="true"
        android:padding="@dimen/buttonPadding"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/button1Text"
        android:textSize="@dimen/buttonTextSize"
        android:background="@color/skypeBlue"
        />

    <Button
        android:layout_width="@dimen/buttonWidth"
        android:layout_height="wrap_content"
        android:id="@+id/button2"
        android:layout_below="@+id/button1"
        android:layout_centerHorizontal="true"
        android:padding="@dimen/buttonPadding"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/button2Text"
        android:textSize="@dimen/buttonTextSize"
        android:background="@color/skypeBlue"
        />

    <Button
        android:layout_width="@dimen/buttonWidth"
        android:layout_height="wrap_content"
        android:id="@+id/button3"
        android:layout_below="@+id/button2"
        android:layout_centerHorizontal="true"
        android:padding="@dimen/buttonPadding"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/button3Text"
        android:textSize="@dimen/buttonTextSize"
        android:background="@color/skypeBlue"
        />

    <Button
        android:layout_width="@dimen/buttonWidth"
        android:layout_height="wrap_content"
        android:id="@+id/button4"
        android:layout_below="@+id/button3"
        android:layout_centerHorizontal="true"
        android:padding="@dimen/buttonPadding"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/button4Text"
        android:textSize="@dimen/buttonTextSize"
        android:background="@color/skypeBlue"
        />

    <Button
        android:layout_width="@dimen/buttonWidth"
        android:layout_height="wrap_content"
        android:id="@+id/button5"
        android:layout_below="@+id/button4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:padding="@dimen/buttonPadding"
        android:text="@string/button5Text"
        android:textSize="@dimen/buttonTextSize"
        android:background="@color/skypeBlue"/>

    <Button
        android:layout_width="@dimen/buttonWidth"
        android:layout_height="wrap_content"
        android:id="@+id/button6"
        android:layout_below="@+id/button5"
        android:layout_centerHorizontal="true"
        android:padding="@dimen/buttonPadding"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/button6Text"
        android:textSize="@dimen/buttonTextSize"
        android:background="@color/orange"
        />

</RelativeLayout>
